--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : "https://yongjunsong.github.io"
+name                     : "Yongjun Song"
+description              : "Thoughts, Experiences, Ideas, Works, and Projects"
+url                      : "https://thedrakesng.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
