--- a/_config.yml
+++ b/_config.yml
@@ -117,9 +117,9 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Thoughts, Experiences, Ideas, Works, and ***Projects***"
   location         : "Seoul"
-  email            : "thedrakesng@gmail.com"
+  email            : " "
   links:
-    - label: "Email"
+    - label: "Mail me"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:thedrakesng@gmail.com"
     - label: "Website"
