--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,9 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  - title: "About me"
+    url: https://www.linkedin.com/in/yongjsong/
+  - title: "3billion"
+    url: https://3billion.io/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
