--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Yongjun here"
+title                    : "Yongjun Song"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Yongjun Song"
@@ -27,9 +27,9 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Yongjun here" 
+masthead_title           : "Yongjun Song" 
 breadcrumbs              : true
-words_per_minute         : 200
+words_per_minute         : 150
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
 copyright_url            : # "copyright" URL, defaults to site.url
@@ -117,7 +117,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Thoughts, Experiences, Ideas, Works, and ***Projects***"
   location         : "Seoul"
-  email            : " "
+  #email            : " "
   links:
     - label: "Mail me"
       icon: "fas fa-fw fa-envelope-square"
