--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Yongjun Song"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Thoughts, Experiences, Ideas, Works, and ***Projects***"
+  bio              : "Thoughts, Experiences, Ideas, Works, and ***Products***"
   location         : "Seoul"
   #email            : " "
   links:
