--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ social:
 analytics:
   provider               : # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-LVT9HE7HRT"
+    tracking_id          : "{{ID}}"
     anonymize_ip         : # true, false (default)
 
 
