--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
   provider               :"google-gtag"
   google:
     tracking_id          : "G-LVT9HE7HRT"
-    anonymize_ip         : # true, false (default)
+    anonymize_ip         : false (default)
 
 
 # Site Author
