--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Thoughts, Experiences, Ideas, Works, and ***Products***"
   location         : "Seoul"
-  #email            : " "
+  #email            : "thedrakesng@gmail.com"
   links:
     - label: "Mail me"
       icon: "fas fa-fw fa-envelope-square"
